# YouTubeDownloader-Simple

./: .dockerignore  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  使い方.md
src/: cli.rs  cookie_detector.rs  error.rs  interactive.rs  main.rs  main_simple.rs  progress_parser.rs  quality.rs  updater.rs  ytdlp_wrapper.rs
