[package]
name = "youtube-batch-downloader"
version = "0.1.0"
edition = "2021"
authors = ["YouTube Batch Downloader Contributors"]
description = "A CLI tool for batch downloading YouTube videos with quality presets"
license = "MIT"

[[bin]]
name = "ytdl"
path = "src/main.rs"

[[bin]]
name = "ytdl-simple"
path = "src/main_simple.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"  # 最小サイズ最適化
lto = true       # Link Time Optimization
codegen-units = 1
strip = true     # シンボル削除
